# devcontainers

go/: .air.toml  README.md  go.mod
go/.devcontainer/: Dockerfile  devcontainer.json
hs/: README.md  mise.toml
hs/.devcontainer/: devcontainer.json
python/: README.md  makefile  mise.toml  pyproject.toml
python-uv/: README.md  main.py  pyproject.toml
rust/: README.md
rust/.devcontainer/: Dockerfile  devcontainer.json
tsx/: README.md  mise.toml  package.json
tsx/.devcontainer/: Dockerfile  devcontainer.json
