[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "tentaShiratori",email = "tenta.shiratori@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "poethepoet (>=0.37.0,<0.38.0)"
]

[tool.poe.tasks]
test = "python ./main.py"
